# sentinal-rag

./: .dockerignore  .env.example  .env.gcp  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  PROGRESS.md  README.md  cloudbuild.yaml  docker-compose.yml  pyproject.toml  pyrightconfig.json  requirements.txt  sample.md
.github/workflows/: build-images.yml  ci.yml  dr-backup-verify.yml  perf-smoke.yml  security.yml
app/: main.py
apps/api/: Dockerfile  pyproject.toml
apps/evaluation-service/: Dockerfile
apps/frontend/: .dockerignore  Dockerfile  README.md  next.config.mjs  package.json  playwright.config.ts  tailwind.config.ts
apps/ingestion-service/: pyproject.toml
apps/retrieval-service/: Dockerfile  pyproject.toml
apps/retrieval-service/sentinelrag_retrieval_service/: __init__.py  config.py  db.py  main.py
apps/retrieval-service/tests/unit/: test_retrieval_service_app.py
apps/temporal-worker/: Dockerfile  pyproject.toml
docs/: codex-handoff.md
docs/architecture/: BACKLOG.md  PHASE_PLAN.md  REMEDIATION_PLAN.md
docs/operations/: cost-report.md  eval-report.md
homelabsetup/: DEPLOY_SENTINELRAG.md  bootstrap-homelab.sh  cleanup-homelab.sh  deploy-homelab.sh  fresh-deploy-homelab.sh  restart-homelab.sh  stop-homelab.sh
infra/bootstrap/: README.md
infra/chaos/: README.md  namespace.yaml
k8s/: deployment.yaml  service.yaml
migrations/: env.py
migrations/versions/: 0004_documents.py  0006_prompts.py  0007_query_traces.py  0009_audit_usage_partitioned.py  0011_multi_dim_embeddings.py  0014_evaluation_score_status.py  (+4 more)
scripts/: smoke.sh
(+356 files in other folders)
