[project]
name = "sentinelrag-retrieval-service"
version = "0.1.0"
description = "Diagnostic HTTP wrapper around shared retrieval primitives."
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "sentinelrag-shared",
]

[tool.uv.sources]
sentinelrag-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sentinelrag_retrieval_service"]
